Implemented UI, main, and added documentation
Implemented the initial UI for the program. Implemented the main function from the original Python program. Added/polished documentation.